# ppp

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/: get_active_windows.py  main.py
data/: forbidden.py  praises.py  roasts.py
extention/: background.js  manifest.json
roast_modules/: bring_vscode.py  log_shame.py  roaster_speaker.py  send_nag.py
src/guilt_3p.egg-info/: PKG-INFO  SOURCES.txt
src/guilt_3p/roast_modules/: bring_vscode.py
utils/: get_apps.py  roaster_speaker.py
