[project]
name = "roast-proto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "gtts>=2.5.4",
    "playsound==1.2.2",
    "plyer>=2.1.0",
    "psutil>=7.2.1",
    "pyttsx3>=2.99",
]
